--- a/workdir/dna_signals.yaml
+++ b/workdir/dna_signals.yaml
@@ -6,8 +6,8 @@ properties: {
   "enforce_spam_limit": 20,
   "max_chunk_interval": 100000,
   "active_agent_duration_s": 300,
-  "enable_signals": false,
-  "enable_time_index": false,
+  "enable_signals": true,
+  "enable_time_index": true,
 }
 zomes: 
   - name: social_context
