--- a/hc-dna/zomes/social_context/Cargo.toml
+++ b/hc-dna/zomes/social_context/Cargo.toml
@@ -18,5 +18,5 @@ hc_time_index = { git = "https://github.com/juntofoundation/HC-Time-Chunking", b
 thiserror = "1.0.20"
 hex = "*"
 
-hdk = "0.0.100"
-holo_hash = "0.0.2-alpha.1"
+hdk = { git = "https://github.com/holochain/holochain", rev = "a6ac04396" }
+holo_hash = { git = "https://github.com/holochain/holochain", rev = "a6ac04396" }
