--- a/hc-dna/workdir/dna_signals.yaml
+++ b/hc-dna/workdir/dna_signals.yaml
@@ -1,7 +1,7 @@
 ---
 manifest_version: 1
 name: "social-context"
-uuid: 00000000-0000-0000-0000-000000000000
+uid: 00000000-0000-0000-0000-000000000000
 properties: {
   "enforce_spam_limit": 20,
   "max_chunk_interval": 100000,
