--- a/hc-dna/workdir/dna_signals.yaml
+++ b/hc-dna/workdir/dna_signals.yaml
@@ -8,6 +8,7 @@ properties: {
   "active_agent_duration_s": 300,
   "enable_signals": true,
   "enable_time_index": true,
+  "index_strategy": "Full"
 }
 zomes: 
   - name: social_context
