--- a/hc-dna/workdir/dna_time_index.yaml
+++ b/hc-dna/workdir/dna_time_index.yaml
@@ -7,7 +7,8 @@ properties: {
   "max_chunk_interval": 100000,
   "active_agent_duration_s": 300,
   "enable_signals": false,
-  "enable_time_index": true
+  "enable_time_index": true,
+  "index_strategy": "Full"
 }
 zomes: 
   - name: social_context
