--- a/hc-dna/zomes/social_context/Cargo.toml
+++ b/hc-dna/zomes/social_context/Cargo.toml
@@ -13,7 +13,7 @@ derive_more = "0"
 serde = "1"
 lazy_static = "*"
 chrono = { version = "0.4", features=["serde"] }
-hc_time_index = { git = "https://github.com/perspect3vism/holochain-time-index", branch = "hdk-0.0.104" }
+hc_time_index = { git = "https://github.com/holochain-open-dev/holochain-time-index", branch = "main" }
 thiserror = "1.0.20"
 hex = "*"
 
