--- a/hc-dna/workdir/dna_signals.yaml
+++ b/hc-dna/workdir/dna_signals.yaml
@@ -4,7 +4,7 @@ name: "social-context"
 uid: 00000000-0000-0000-0000-000000000000
 properties: {
   "enforce_spam_limit": 20,
-  "max_chunk_interval": 30000,
+  "max_chunk_interval": 43200000,
   "active_agent_duration_s": 300,
   "enable_signals": true,
   "enable_time_index": true,
