--- a/hc-dna/zomes/social_context/Cargo.toml
+++ b/hc-dna/zomes/social_context/Cargo.toml
@@ -13,7 +13,7 @@ derive_more = "0"
 serde = "1"
 lazy_static = "*"
 chrono = { version = "0.4", features=["serde"] }
-hc_time_index = { path = "/home/josh/Documents/junto/holochain-time-index" }
+hc_time_index = { git = "https://github.com/juntofoundation/HC-Time-Chunking", branch = "main" }
 thiserror = "1.0.20"
 hex = "*"
 
